--- a/13-01.md
+++ b/13-01.md
@@ -34,6 +34,33 @@
 Ответьте на следующие вопросы:
 
 - Какие сетевые службы в ней разрешены?
+```
+PORT     STATE SERVICE
+21/tcp   open  ftp
+22/tcp   open  ssh
+23/tcp   open  telnet
+25/tcp   open  smtp
+53/tcp   open  domain
+80/tcp   open  http
+111/tcp  open  rpcbind
+139/tcp  open  netbios-ssn
+445/tcp  open  microsoft-ds
+512/tcp  open  exec
+513/tcp  open  login
+514/tcp  open  shell
+953/tcp  open  rndc
+1524/tcp open  ingreslock
+2049/tcp open  nfs
+2121/tcp open  ccproxy-ftp
+3306/tcp open  mysql
+3632/tcp open  distccd
+5432/tcp open  postgres
+5900/tcp open  vnc
+6000/tcp open  X11
+6667/tcp open  irc
+8009/tcp open  ajp13
+```
+
 - Какие уязвимости были вами обнаружены? (список со ссылками: достаточно трёх уязвимостей)
   
 *Приведите ответ в свободной форме.*  
